; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-highlander/extr_setup.c_r7780rp_power_off.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-highlander/extr_setup.c_r7780rp_power_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PA_POFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @r7780rp_power_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @r7780rp_power_off() #0 {
  %1 = call i64 (...) @mach_is_r7780mp()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %6, label %3

3:                                                ; preds = %0
  %4 = call i64 (...) @mach_is_r7785rp()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %3, %0
  %7 = load i32, i32* @PA_POFF, align 4
  %8 = call i32 @ctrl_outw(i32 1, i32 %7)
  br label %9

9:                                                ; preds = %6, %3
  ret void
}

declare dso_local i64 @mach_is_r7780mp(...) #1

declare dso_local i64 @mach_is_r7785rp(...) #1

declare dso_local i32 @ctrl_outw(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
